# stata_kernel

./: .editorconfig  .gitignore  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  index.html  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  test.yml
CONTRIBUTING/: index.html
addendum/: index.html
comparison_with_ipystata/: index.html
docs/: mkdocs.yml
docs/src/: addendum.md  comparison_with_ipystata.md  getting_started.md  index.md  troubleshooting.md
docs/src/user_guide/: configuration.md  install.md  limitations.md  troubleshooting.md
docs/src/user_guide/usage/: atom.md  console.md  notebook.md
docs/src/using_jupyter/: atom.md  console.md  emacs-org-mode.md  euporie.md  intro.md  lab.md  notebook.md  nteract.md  qtconsole.md  remote.md
docs/src/using_stata_kernel/: configuration.md  intro.md  limitations.md  magics.md  troubleshooting.md
echo_kernel/: __init__.py  __main__.py  install.py  kernel.py
examples/: Example.ipynb
getting_started/: index.html
helpers/: helpers.js
issues/234/: README.md  example.html  svg_create.do
license/: index.html
search/: search_index.json
stata_kernel/: __init__.py  __main__.py  code_manager.py  completions.py  config.py  install.py  kernel.py  poor_mans_magic.py  stata_lexer.py  stata_magics.py  stata_session.py  utils.py
stata_kernel/ado/: _StataKernelCompletions.ado  _StataKernelExportDelim.ado  _StataKernelHead.ado  _StataKernelLog.ado  _StataKernelResetRC.ado  _StataKernelTail.ado  _StataKernel_ds.ado
stata_kernel/codemirror/: stata.js
stata_kernel/css/: _StataKernelHelpDefault.css
stata_kernel/docs/: index.html  index.txt  make.sh  make_href
stata_kernel/docs/css/: pandoc.css
stata_kernel/docs/using_stata_kernel/: magics.html  magics.txt
stata_kernel/pygments/: _mata_builtins.py  stata.py
tests/: test_kernel.py  test_kernel_completions.py  test_kernel_display_data.py  test_kernel_stdout.py  test_mata_lexer.py  test_stata_lexer.py  utils.py
tests/test_data/: auto.dta
using_jupyter/atom/: index.html
using_jupyter/console/: index.html
using_jupyter/intro/: index.html
using_jupyter/lab/: index.html
using_jupyter/notebook/: index.html
using_jupyter/nteract/: index.html
using_jupyter/qtconsole/: index.html
using_jupyter/remote/: index.html
using_stata_kernel/configuration/: index.html
using_stata_kernel/intro/: index.html
using_stata_kernel/limitations/: index.html
using_stata_kernel/magics/: index.html
using_stata_kernel/troubleshooting/: index.html
