[tool.poetry]
name = "stata_kernel"
version = "1.13.0"
description = "A Jupyter kernel for Stata. Works with Windows, macOS, and Linux."
authors = [
    "Kyle Barron <kylebarron2@gmail.com>",
    "Mauricio Caceres Bravo <mauricio.caceres.bravo@gmail.com>",
]
license = "GPLv3"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
keywords = ["stata"]
repository = "https://github.com/kylebarron/stata_kernel"
documentation = "https://kylebarron.dev/stata_kernel/"

[tool.poetry.dependencies]
python = "^3.6.1"
beautifulsoup4 = "^4.6.3"
pandas = "^1.0"
pygments = "^2.2"
pexpect = "^4.6.0"
requests = "^2.19.1"
jupyter-client = "^5.2.3"
IPython = "^6.5.0"
ipykernel = "^4.8.2"
packaging = "^17.1"
pillow = ">=5.2.0"
pywin32 = { version = ">=223", platform = "Windows" }

[tool.poetry.dev-dependencies]
bumpversion = "^0.6"
mkdocs-material = ">=3.0.3"
mkdocs = ">=1.0"
yapf = ">=0.20.2"
pytest = ">=3.7.1"
# importlib-metadata==0.23
# jupyter_kernel_test==0.3.0

[build-system]
requires = ["poetry-core>=1.1.10"]
build-backend = "poetry.core.masonry.api"
