[tool.poetry]
name = "stata_kernel"
version = "1.14.2"
description = "A Jupyter kernel for Stata. Works with Windows, macOS, and Linux."
authors = [
    "Kyle Barron <kylebarron2@gmail.com>",
    "Mauricio Caceres Bravo <mauricio.caceres.bravo@gmail.com>",
]
license = "GPLv3"
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
keywords = ["stata"]
repository = "https://github.com/kylebarron/stata_kernel"
documentation = "https://kylebarron.dev/stata_kernel/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
beautifulsoup4 = "^4.6.3"
pandas = ">=1.0"
numpy = ">=1.22.0"
pygments = "^2.2"
pexpect = "^4.6.0"
packaging = "^17.1"
pillow = ">=5.2.0"
pywin32 = { version = ">=223", platform = "Windows" }
fake-useragent = "^2.0.0"
IPython = "^7.34"
ipykernel = "^4.8.2"
jupyter-client = "^6.1.12"
jupyter-core = "^5.8.1"
notebook = "^6.5.7"
nbclient = "^0.8"
setuptools = "<81"

[tool.poetry.dev-dependencies]
bumpversion = "^0.6"
mkdocs-material = ">=3.0.3"
mkdocs = ">=1.0"
yapf = ">=0.20.2"
pytest = ">=3.7.1"
jupyter_kernel_test = "0.3.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "1.14.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit = true
tag = true
commit_message = "bump version {old_version} → {new_version}"
tag_message = "bump version {old_version} → {new_version}"
tag_template = "v{new_version}"

[tool.bumpver.file_patterns]
"setup.cfg" = ['current_version = {version}']
"stata_kernel/kernel.py" = ["implementation_version = '{version}'"]
"stata_kernel/__init__.py" = ["__version__ = '{version}'"]
"pyproject.toml" = ['version = "{version}"']
